# promptparse-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: basic_usage.rs
src/: bot_barcode.rs  emvco_qr.rs  error.rs  lib.rs  parser.rs  tlv.rs
src/generate/: any_id.rs  bill_payment.rs  bot_barcode.rs  mod.rs  slip_verify.rs  true_money.rs  true_money_slip_verify.rs
src/utils/: checksum.rs  encoder.rs  mod.rs
src/validate/: bcel_one_proof.rs  mod.rs  slip_verify.rs  true_money_slip_verify.rs
tests/: integration_tests.rs  lib_tests.rs
